--- a/index.html
+++ b/index.html
@@ -224,12 +224,32 @@
           <h2 class="section__title">Наша команда</h2>
           <ul class="team">
             <li class="team__item">
-              <img
-                class="team__img"
-                src="./images/img4.jpg"
-                alt="Фото сотрудника"
-                width="270"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/desktop/team/team1.jpg    1x,
+                    ./images/desktop/team/team1@2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/tablet/team/team1.jpg    1x,
+                    ./images/tablet/team/team1@2x.jpg 2x
+                  "
+                />
+                <img
+                  class="team__img"
+                  srcset="
+                    ./images/mobile/team/team1.jpg    1x,
+                    ./images/mobile/team/team1@2x.jpg 2x
+                  "
+                  src="./images/mobile/team/team1.jpg"
+                  width="450"
+                  alt="Фото сотрудника"
+                />
+              </picture>
               <div class="team__box">
                 <h3 class="team__title">Игорь Демьяненко</h3>
                 <p class="team__text" lang="en">Product Designer</p>
@@ -266,12 +286,35 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                class="team__img"
-                src="./images/img5.jpg"
-                alt="Фото сотрудника"
-                width="270"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/desktop/team/team2.jpg    1x,
+                    ./images/desktop/team/team2@2x.jpg 2x
+                  "
+                  sizes="(min-width: 1200px), 25vw"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/tablet/team/team2.jpg    1x,
+                    ./images/tablet/team/team2@2x.jpg 2x
+                  "
+                  sizes="(min-width: 768px), 50vw"
+                />
+                <img
+                  class="team__img"
+                  srcset="
+                    ./images/mobile/team/team2.jpg    1x,
+                    ./images/mobile/team/team2@2x.jpg 2x
+                  "
+                  sizes="(min-width: 480px), 100vw"
+                  src="./images/mobile/team/team2.jpg"
+                  width="450"
+                  alt="Фото сотрудника"
+                />
+              </picture>
               <div class="team__box">
                 <h3 class="team__title">Ольга Репина</h3>
                 <p class="team__text" lang="en">Frontend Developer</p>
@@ -308,12 +351,35 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                class="team__img"
-                src="./images/img6.jpg"
-                alt="Фото сотрудника"
-                width="270"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/desktop/team/team3.jpg    1x,
+                    ./images/desktop/team/team3@2x.jpg 2x
+                  "
+                  sizes="(min-width: 1200px), 25vw"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/tablet/team/team3.jpg    1x,
+                    ./images/tablet/team/team3@2x.jpg 2x
+                  "
+                  sizes="(min-width: 768px), 50vw"
+                />
+                <img
+                  class="team__img"
+                  srcset="
+                    ./images/mobile/team/team3.jpg    1x,
+                    ./images/mobile/team/team3@2x.jpg 2x
+                  "
+                  sizes="(min-width: 480px), 100vw"
+                  src="./images/mobile/team/team3.jpg"
+                  width="450"
+                  alt="Фото сотрудника"
+                />
+              </picture>
               <div class="team__box">
                 <h3 class="team__title">Николай Тарасов</h3>
                 <p class="team__text" lang="en">Marketing</p>
@@ -350,12 +416,35 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                class="team__img"
-                src="./images/img7.jpg"
-                alt="Фото сотрудника"
-                width="270"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/desktop/team/team4.jpg    1x,
+                    ./images/desktop/team/team4@2x.jpg 2x
+                  "
+                  sizes="(min-width: 1200px), 25vw"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/tablet/team/team4.jpg    1x,
+                    ./images/tablet/team/team4@2x.jpg 2x
+                  "
+                  sizes="(min-width: 768px), 50vw"
+                />
+                <img
+                  class="team__img"
+                  srcset="
+                    ./images/mobile/team/team4.jpg    1x,
+                    ./images/mobile/team/team4@2x.jpg 2x
+                  "
+                  sizes="(min-width: 480px), 100vw"
+                  src="./images/mobile/team/team4.jpg"
+                  width="450"
+                  alt="Фото сотрудника"
+                />
+              </picture>
               <div class="team__box">
                 <h3 class="team__title">Михаил Ермаков</h3>
                 <p class="team__text" lang="en">UI Designer</p>
