--- a/portfolio.html
+++ b/portfolio.html
@@ -140,13 +140,32 @@
             <li class="cards__item">
               <a class="cards__link" href="#">
                 <div class="cards__block">
-                  <img
-                    class="cards__img"
-                    src="./images/portfolio/img1.jpg"
-                    width="370"
-                    height="294"
-                    alt="Ноутбук с веб-сайтом"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/portfolio/img1.jpg    1x,
+                        ./images/desktop/portfolio/img1@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/tablet/portfolio/img1.jpg    1x,
+                        ./images/tablet/portfolio/img1@2x.jpg 2x
+                      "
+                    />
+                    <img
+                      class="cards__img"
+                      srcset="
+                        ./images/mobile/portfolio/img1.jpg    1x,
+                        ./images/mobile/portfolio/img1@2x.jpg 2x
+                      "
+                      src="./images/mobile/portfolio/img1.jpg"
+                      width="450"
+                      alt="Ноутбук с веб-сайтом"
+                    />
+                  </picture>
                   <p class="cards__discription">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -162,13 +181,32 @@
             <li class="cards__item">
               <a class="cards__link" href="#">
                 <div class="cards__block">
-                  <img
-                    class="cards__img"
-                    src="./images/portfolio/img2.jpg"
-                    width="370"
-                    height="294"
-                    alt="Постер с баскетболистами"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/portfolio/img2.jpg    1x,
+                        ./images/desktop/portfolio/img2@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/tablet/portfolio/img2.jpg    1x,
+                        ./images/tablet/portfolio/img2@2x.jpg 2x
+                      "
+                    />
+                    <img
+                      class="cards__img"
+                      srcset="
+                        ./images/mobile/portfolio/img2.jpg    1x,
+                        ./images/mobile/portfolio/img2@2x.jpg 2x
+                      "
+                      src="./images/mobile/portfolio/img2.jpg"
+                      width="450"
+                      alt="Постер с баскетболистами"
+                    />
+                  </picture>
                   <p class="cards__discription">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -189,13 +227,32 @@
             <li class="cards__item">
               <a class="cards__link" href="#">
                 <div class="cards__block">
-                  <img
-                    class="cards__img"
-                    src="./images/portfolio/img3.jpg"
-                    width="370"
-                    height="294"
-                    alt="Лого с акулой для ресторана"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/portfolio/img3.jpg    1x,
+                        ./images/desktop/portfolio/img3@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/tablet/portfolio/img3.jpg    1x,
+                        ./images/tablet/portfolio/img3@2x.jpg 2x
+                      "
+                    />
+                    <img
+                      class="cards__img"
+                      srcset="
+                        ./images/mobile/portfolio/img3.jpg    1x,
+                        ./images/mobile/portfolio/img3@2x.jpg 2x
+                      "
+                      src="./images/mobile/portfolio/img3.jpg"
+                      width="450"
+                      alt="Лого с акулой для ресторана"
+                    />
+                  </picture>
                   <p class="cards__discription">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -214,13 +271,32 @@
             <li class="cards__item">
               <a class="cards__link" href="#">
                 <div class="cards__block">
-                  <img
-                    class="cards__img"
-                    src="./images/portfolio/img4.jpg"
-                    width="370"
-                    height="294"
-                    alt="Наушники"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/portfolio/img4.jpg    1x,
+                        ./images/desktop/portfolio/img4@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/tablet/portfolio/img4.jpg    1x,
+                        ./images/tablet/portfolio/img4@2x.jpg 2x
+                      "
+                    />
+                    <img
+                      class="cards__img"
+                      srcset="
+                        ./images/mobile/portfolio/img4.jpg    1x,
+                        ./images/mobile/portfolio/img4@2x.jpg 2x
+                      "
+                      src="./images/mobile/portfolio/img4.jpg"
+                      width="450"
+                      alt="Наушники"
+                    />
+                  </picture>
                   <p class="cards__discription">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -239,13 +315,32 @@
             <li class="cards__item">
               <a class="cards__link" href="#">
                 <div class="cards__block">
-                  <img
-                    class="cards__img"
-                    src="./images/portfolio/img5.jpg"
-                    width="370"
-                    height="294"
-                    alt="Упаковка коробки"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/portfolio/img5.jpg    1x,
+                        ./images/desktop/portfolio/img5@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/tablet/portfolio/img5.jpg    1x,
+                        ./images/tablet/portfolio/img5@2x.jpg 2x
+                      "
+                    />
+                    <img
+                      class="cards__img"
+                      srcset="
+                        ./images/mobile/portfolio/img5.jpg    1x,
+                        ./images/mobile/portfolio/img5@2x.jpg 2x
+                      "
+                      src="./images/mobile/portfolio/img5.jpg"
+                      width="450"
+                      alt="Упаковка и коробка"
+                    />
+                  </picture>
                   <p class="cards__discription">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -264,13 +359,32 @@
             <li class="cards__item">
               <a class="cards__link" href="#">
                 <div class="cards__block">
-                  <img
-                    class="cards__img"
-                    src="./images/portfolio/img6.jpg"
-                    width="370"
-                    height="294"
-                    alt="Монитор"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/portfolio/img6.jpg    1x,
+                        ./images/desktop/portfolio/img6@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/tablet/portfolio/img6.jpg    1x,
+                        ./images/tablet/portfolio/img6@2x.jpg 2x
+                      "
+                    />
+                    <img
+                      class="cards__img"
+                      srcset="
+                        ./images/mobile/portfolio/img6.jpg    1x,
+                        ./images/mobile/portfolio/img6@2x.jpg 2x
+                      "
+                      src="./images/mobile/portfolio/img6.jpg"
+                      width="450"
+                      alt="Монитор"
+                    />
+                  </picture>
                   <p class="cards__discription">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -288,13 +402,32 @@
             <li class="cards__item">
               <a class="cards__link" href="#">
                 <div class="cards__block">
-                  <img
-                    class="cards__img"
-                    src="./images/portfolio/img7.jpg"
-                    width="370"
-                    height="294"
-                    alt="Журнал"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/portfolio/img7.jpg    1x,
+                        ./images/desktop/portfolio/img7@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/tablet/portfolio/img7.jpg    1x,
+                        ./images/tablet/portfolio/img7@2x.jpg 2x
+                      "
+                    />
+                    <img
+                      class="cards__img"
+                      srcset="
+                        ./images/mobile/portfolio/img7.jpg    1x,
+                        ./images/mobile/portfolio/img7@2x.jpg 2x
+                      "
+                      src="./images/mobile/portfolio/img7.jpg"
+                      width="450"
+                      alt="Журнал"
+                    />
+                  </picture>
                   <p class="cards__discription">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -315,13 +448,32 @@
             <li class="cards__item">
               <a class="cards__link" href="#">
                 <div class="cards__block">
-                  <img
-                    class="cards__img"
-                    src="./images/portfolio/img8.jpg"
-                    width="370"
-                    height="294"
-                    alt="Дизайн бирки"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/portfolio/img8.jpg    1x,
+                        ./images/desktop/portfolio/img8@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/tablet/portfolio/img8.jpg    1x,
+                        ./images/tablet/portfolio/img8@2x.jpg 2x
+                      "
+                    />
+                    <img
+                      class="cards__img"
+                      srcset="
+                        ./images/mobile/portfolio/img8.jpg    1x,
+                        ./images/mobile/portfolio/img8@2x.jpg 2x
+                      "
+                      src="./images/mobile/portfolio/img8.jpg"
+                      width="450"
+                      alt="Дизайн бирки"
+                    />
+                  </picture>
                   <p class="cards__discription">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -339,13 +491,32 @@
             <li class="cards__item">
               <a class="cards__link" href="#">
                 <div class="cards__block">
-                  <img
-                    class="cards__img"
-                    src="./images/portfolio/img9.jpg"
-                    width="370"
-                    height="294"
-                    alt="Работа за ноутбуком"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/portfolio/img9.jpg    1x,
+                        ./images/desktop/portfolio/img9@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/tablet/portfolio/img9.jpg    1x,
+                        ./images/tablet/portfolio/img9@2x.jpg 2x
+                      "
+                    />
+                    <img
+                      class="cards__img"
+                      srcset="
+                        ./images/mobile/portfolio/img9.jpg    1x,
+                        ./images/mobile/portfolio/img9@2x.jpg 2x
+                      "
+                      src="./images/mobile/portfolio/img9.jpg"
+                      width="450"
+                      alt="Работа за ноутбуком"
+                    />
+                  </picture>
                   <p class="cards__discription">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
